Added aws setup guide and updated Igris chat companion with real apis